# libslimbook

./: 99-slimbook-settings.rules  meson.build  report-pack  slimbook-settings.service  slimbook-sleep  slimbookctl.completion
report.d/: apt  apt-upgradeable  blk  cpu  dmi  dnf  efiboot  flatpak  ip  journal  journal-critical  libinput  mem  pamac  pci  usb  wireless  xinput
src/: amdsmu.cpp  amdsmu.h  common.cpp  common.h  configuration.cpp  configuration.h  meson.build  pci.cpp  pci.h  slimbook.cpp  slimbook.h  slimbookctl.cpp  smbios.cpp
